# fantoccini-session-manager

./: Cargo.toml  README.md
examples/: 000.rs  bad.rs  mid.rs  sad.rs
src/: lib.rs  main.rs
